retryable writes trigger failCommands enabled only for `find`

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • Hide

      Configure a failCommand for `find`, specifying blockTimeMS and blockConnection: true:

      {
        configureFailPoint: 'failCommand',
        mode: { times: 1 },
        data: { failCommands: ['find'], blockConnection: true, blockTimeMS: 10_000 }
      }
      

      execute a retryable write and observe the command is delayed by blockTimeMS.

      disable retryable writes and observe that the command is instantaneous.

      Show
      Configure a failCommand for `find`, specifying blockTimeMS and blockConnection: true: { configureFailPoint: 'failCommand' , mode: { times: 1 }, data: { failCommands: [ 'find' ], blockConnection: true , blockTimeMS: 10_000 } } execute a retryable write and observe the command is delayed by blockTimeMS. disable retryable writes and observe that the command is instantaneous.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      FailCommands enabled only for the `find` command are activated by retryable writes because retryable writes send an internal find command against`config.transactions`, which activates the failCommand. This is visible to the write command if the failCommand is configured with blockTimeMS and blockConnection because the triggered failCommand blocks the find for blockTimeMS, which in turn blocks the write by blockTimeMS.

      As a potential fix, Max Hirschorn suggested:

      probably we should check in shouldActivateFailCommandFailPoint() for Client::isInDirectClient() and not activate the failpoint for the internal find command.

            Assignee:
            Ivan Fefer
            Reporter:
            Bailey Pearson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: