SERVER-96164 Check for direct client in shouldActivateFailCommandFailPoint (#34509)

GitOrigin-RevId: 8a7ae765120bb7cdf9a5838be915172fa94441ec